# coinbase-rs

./: .gitignore  Cargo.toml  README.md  index.html
main/: search-index.js  settings.html  source-files.js
main/coinbase/: all.html  index.html  sidebar-items.js
main/coinbase/accounts/: enum.AccountType.html  index.html  sidebar-items.js  struct.Account.html  struct.AccountCurrency.html
main/coinbase/client/: enum.SortOrder.html  index.html  sidebar-items.js  struct.Client.html  struct.PagedResponse.html  struct.Pagination.html  struct.PaginationOptions.html  struct.Response.html
main/coinbase/errors/: enum.Error.html  index.html  sidebar-items.js  struct.CoinbaseError.html  type.Result.html
main/coinbase/transactions/: enum.TransactionStatus.html  enum.TransactionType.html  index.html  sidebar-items.js  struct.AccountCurrency.html  struct.Money.html  struct.Transaction.html
main/coinbase/users/: index.html  sidebar-items.js  struct.Auth.html  struct.User.html  struct.UserUpdate.html
main/get_current_user/: all.html  fn.main.html  index.html
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/convert/: trait.From.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/src/coinbase/: accounts.rs.html  client.rs.html  errors.rs.html  lib.rs.html  transactions.rs.html  users.rs.html
main/src/get_current_user/: get_current_user.rs.html
src/: accounts.rs  client.rs  errors.rs  lib.rs  transactions.rs  users.rs
src/examples/: get_current_user.rs
(+8 files in other folders)
