[package]
name = "coinbase"
version = "0.1.0"
authors = ["Amol Bhave <amol@amolbhave.com>"]
edition = "2018"
description = "Coinbase Client for Rust"
readme = "README.md"
repository = "https://github.com/ammubhave/coinbase-rs"
license = "MIT"
keywords = ["coinbase", "api", "cryptocurrencies", "bitcoin"]
documentation = "https://ammubhave.github.io/coinbase-rs/"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
tokio = {version = "1.3.0", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.19", features = ["serde"] }
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4.3"

[[example]]
name = "get_current_user"
path = "src/examples/get_current_user.rs"

[dev-dependencies]
dotenv = "0.15.0"
